--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "version": "pnpm install --no-frozen-lockfile && IS_PUBLISH=yes ./scripts/check-pre-compiled.sh && git add .",
     "prepare": "husky",
     "sync-react": "node ./scripts/sync-react.js",
-    "update-google-fonts": "node ./scripts/update-google-fonts.js"
+    "update-google-fonts": "node ./scripts/update-google-fonts.js",
+    "devlow-bench": "node ./scripts/devlow-bench.mjs"
   },
   "devDependencies": {
     "@actions/core": "1.10.1",
@@ -115,6 +116,7 @@
     "@typescript-eslint/eslint-plugin": "6.14.0",
     "@typescript-eslint/parser": "6.14.0",
     "@vercel/fetch": "6.1.1",
+    "@vercel/devlow-bench": "0.3.1",
     "@vercel/og": "0.6.2",
     "abort-controller": "3.0.0",
     "alex": "9.1.0",
